# Twiads

./: .gitignore  README.md  pyproject.toml
scr/twiads/: manage.py
scr/twiads/core/business_logic/: exceptions.py
scr/twiads/core/business_logic/dto/: __init__.py  comment.py  profile.py  registration.py  subscriber.py  tweet.py
scr/twiads/core/business_logic/services/: __init__.py  another_profile.py  comment.py  common.py  home.py  like.py  login.py  notification.py  profile.py  registration.py  retweet.py  subscriber.py  tag.py  trending_in_your_country.py  tweet.py
scr/twiads/core/migrations/: 0001_initial.py  0002_populate_countries_table.py  0003_populate_notificaion_types_table.py  0004_rename_tag_tweet_tags.py  0005_user_bio.py  0006_alter_user_avatar.py  0007_alter_retweet_tweet.py
scr/twiads/core/models/: __init__.py  base_model.py  confirmation_code.py  country.py  like.py  notification.py  notification_type.py  retweet.py  tag.py  tweet.py  user.py
scr/twiads/core/presentation/: urls.py  validators.py
scr/twiads/core/presentation/forms/: __init__.py  comment.py  login.py  notification.py  profile.py  registration.py  sort.py  tag.py  tweet.py
scr/twiads/core/presentation/templates/: add_tweet.html  another_profile.html  base.html  comment.html  edit_profile.html  edit_tweet.html  followers.html  followings.html  get_tweet.html  home.html  notifications.html  profile.html  signin.html  signup.html  tags.html  trending_in_your_country.html
scr/twiads/core/presentation/views/: comment.py  (+14 more)
scr/twiads/twiads/: asgi.py  settings.py  urls.py  wsgi.py
(+1 files in other folders)
